      motifs. The update_motifs() function is used to apply changes to the
      actual motifs, and to_list() returns the actual motifs. Note that this is
      only meant as an option for more conveniently manipulating motif slots of
      multiple motifs simultaneously before returning them to a list; the
      universalmotif_df structure cannot be used in the various universalmotif
      functions.

    o view_motifs(): the universalmotif package now relies entirely on its
      own code to generate the polygon data used by ggplot2 to plot motifs,
      meaning the ggseqlogo dependency has been dropped. A number of new
      options are now available, including plotting multifreq logos and finer
      control over letter spacing. An effort has been made to ensure that the
      default behaviour of the function be unchanged from previous versions.
      This change should also allow for easier fixing of bugs and flexibility
      for future additions or changes.

    o view_logo(): plot logos with matrix input instead of motif object input.
      Arbitrary column heights and multi-character letters are allowed.

    o trim_motifs(..., trim.from): trim from both directions or just one.

    o shuffle_sequences(..., window, window.size, window.overlap): shuffle
      sequences iteratively in windows of specified size.

MINOR CHANGES

    o Some additions and clean-up to documentation and vignettes.

    o Support for MotIV-pwm2 formatted motifs has been dropped, as the package
      is no longer a part of the current Bioconductor version.

    o read_matrix()/write_matrix(): the sep argument can now be NULL (no
      seperators.)

    o The Rdpack dependency has been dropped.

CHANGES IN VERSION 1.8.3
------------------------

BUG FIXES

    o Fixed improper handling of MEME version string in read_meme().

CHANGES IN VERSION 1.8.2
------------------------

BUG FIXES

    o Increase compliance with MEME motif format: motif files with missing