@@ -56,6 +56,7 @@ export(read_meme)
 export(read_motifs)
 export(read_transfac)
 export(read_uniprobe)
+export(requires_update)
 export(round_motif)
 export(rowMeans)
 export(rowSums)
