@@ -1,13 +1,15 @@
 context("universalmotif_df")
 
-test_that("to_df(), update_motifs(), to_list() work", {
+test_that("to_df(), update_motifs(), to_list(), requires_update() work", {
   m1 <- create_motif()
   m2 <- create_motif()
   m3 <- create_motif()
   m4 <- create_motif()
   mydf <- to_df(c(m1, m2, m3, m4))
+  expect_false(requires_update(mydf))
   expect_equal(mydf$name[1], "motif")
   mydf$name <- LETTERS[1:4]
+  expect_true(requires_update(mydf))
   expect_equal(mydf$name[1], "A")
   mydf <- update_motifs(mydf)
   expect_equal(mydf$name[1], "A")
@@ -22,4 +24,8 @@ test_that("extrainfo gets moved around correctly", {
   m2["extrainfo"] <- c(C = "G", E = "H", I = "J")
   mydf1 <- to_df(c(m1, m2))
   mydf2 <- to_df(c(m1, m2), extrainfo = TRUE)
+  mydf2$A[1] <- "K"
+  expect_warning(requires_update(mydf2))
+  expect_false(suppressWarnings(requires_update(mydf2)))
+  expect_true(requires_update(mydf2, TRUE))
 })
