@@ -11,7 +11,8 @@ NEW FEATURES
       only meant as an option for more conveniently manipulating motif slots of
       multiple motifs simultaneously before returning them to a list; the
       universalmotif_df structure cannot be used in the various universalmotif
-      functions.
+      functions. Additionally, requires_update() can be used to ascertain
+      whether motifs are out of date in a universalmotif_df object.
 
     o view_motifs(): the universalmotif package now relies entirely on its
       own code to generate the polygon data used by ggplot2 to plot motifs,
